<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/large_dimen"
    tools:context=".ui.UserDetailActivity">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:src="@drawable/user1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/text_todo" />

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar"
        tools:text="Username" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_dimen"
        android:gravity="center_horizontal"
        android:textSize="@dimen/xxlarge_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_username"
        tools:text="Nama" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_dimen"
        android:layout_marginTop="@dimen/medium_dimen"
        android:layout_marginEnd="@dimen/medium_dimen"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/medium_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/large_dimen">

            <TextView
                android:id="@+id/txt_repository"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_repositories"
                android:textSize="@dimen/large_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_following"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_repository_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_dimen"
                android:gravity="center_horizontal"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_followimg_value"
                app:layout_constraintTop_toBottomOf="@+id/txt_repository"
                tools:text="4" />

            <TextView
                android:id="@+id/txt_follower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_dimen"
                android:gravity="center_horizontal"
                android:text="@string/text_followers"
                android:textSize="@dimen/large_text"
                app:layout_constraintBottom_toTopOf="@+id/txt_follower_value"
                app:layout_constraintEnd_toStartOf="@+id/txt_following"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_follower_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_dimen"
                android:gravity="center_horizontal"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txt_followimg_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_follower"
                tools:text="1" />

            <TextView
                android:id="@+id/txt_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_following"
                android:textSize="@dimen/large_text"
                app:layout_constraintEnd_toStartOf="@+id/txt_repository"
                app:layout_constraintStart_toEndOf="@+id/txt_follower"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_followimg_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_dimen"
                android:gravity="center_horizontal"
                android:textSize="@dimen/large_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/txt_repository_value"
                app:layout_constraintStart_toEndOf="@+id/txt_follower_value"
                app:layout_constraintTop_toBottomOf="@+id/txt_following"
                tools:text="2" />

            <TextView
                android:id="@+id/txt_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawablePadding="@dimen/small_dimen"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_action_company"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/txt_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_follower_value"
                tools:text="Company" />

            <TextView
                android:id="@+id/txt_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_dimen"
                android:drawablePadding="@dimen/small_dimen"
                android:gravity="center_vertical"
                app:drawableStartCompat="@drawable/ic_action_location"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txt_company"
                app:layout_constraintTop_toBottomOf="@+id/txt_repository_value"
                tools:text="Location" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>